--- a/src/Components/Header/style.scss
+++ b/src/Components/Header/style.scss
@@ -64,9 +64,10 @@
         width: clamp(111px, 11.56176vw, 444px);
         transition: 0.3s all;
       }
+
       &__btn:hover {
         cursor: pointer;
-        background-color: #ca0725;
+        background-color: #90051A;
       }
     }
 
@@ -80,6 +81,7 @@
         transition: 0.3s all;
         margin: $m32;
       }
+
       &__item:hover {
         cursor: pointer;
         color: $red;
