--- a/src/Screens/FooterScreen/style.scss
+++ b/src/Screens/FooterScreen/style.scss
@@ -20,6 +20,11 @@
     font-weight: 400;
   }
 }
+.spark {
+  width: clamp(105px, 49.0644vw, 420px);
+  height: clamp(34.5px, 16.12116vw, 138px);
+  margin-bottom: $m32mob;
+}
 
 .footer_pc {
   display: none;
@@ -30,9 +35,16 @@
     display: none;
   }
 
+  .spark-pc {
+    margin-top: $m16;
+    width: clamp(100px, 10.416vw, 400px);
+    height: clamp(50px, 5.208vw, 200px);
+  }
+
   .footer_pc {
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: $dark;
     width: 100%;
     padding-top: $m32;
@@ -56,6 +68,9 @@
       width: clamp(96.5px, 10.05144vw, 386px);
       height: clamp(10.325px, 1.0754519999999999vw, 41.3px);
     }
+    &__logo:hover {
+      cursor: pointer;
+    }
 
     &__items {
       display: flex;
@@ -69,10 +84,12 @@
         font-size: $font21;
         font-weight: 400;
         color: #ffffff;
+        transition: 0.3s all;
       }
-    }
-    &__items:hover {
-      cursor: pointer;
+      &__text:hover {
+        cursor: pointer;
+        color: $red;
+      }
     }
   }
 }
