--- a/src/Screens/MainScreen/style.scss
+++ b/src/Screens/MainScreen/style.scss
@@ -20,7 +20,7 @@
     color: $dark;
     font-weight: 700;
     text-align: center;
-    width: 80%;
+    width: 90%;
     line-height: clamp(22.75px, 10.630619999999999vw, 91px);
     margin-top: $m16mob;
   }
@@ -50,7 +50,7 @@
       color: #ffffff;
       font-weight: 700;
       text-align: center;
-      width: 80%;
+      width: 90%;
       line-height: clamp(22.75px, 10.630619999999999vw, 91px);
       margin-top: $m16mob;
     }
@@ -60,7 +60,7 @@
       font-weight: 400;
       font-size: $font16mob;
       text-align: center;
-      width: 65%;
+      width: 75%;
       line-height: clamp(12.5px, 5.840999999999999vw, 50px);
       margin-top: $m16mob;
     }
@@ -126,7 +126,7 @@
       color: $dark;
       font-size: clamp(20px, 2.0832vw, 80px);
       font-weight: bold;
-      width: 55%;
+      width: 65%;
       margin-bottom: $m16;
     }
 
@@ -142,14 +142,14 @@
         font-size: clamp(9px, 0.93744vw, 36px);
         font-weight: 400;
         line-height: clamp(15px, 1.5624vw, 60px);
-        width: 60%;
+        width: 100%;
       }
 
       &__separator {
         border: 1px solid $dark;
         height: clamp(35px, 3.6456vw, 140px);
         position: relative;
-        right: clamp(100px, 10.416vw, 400px);
+        right: clamp(12.5px, 1.302vw, 50px);
       }
 
       &__btn {
@@ -164,7 +164,7 @@
         margin-left: $m32;
         transition: 0.3s all;
         position: relative;
-        right: clamp(95px, 9.8952vw, 380px);
+        right: clamp(12.5px, 1.302vw, 50px);
       }
 
       &__btn:hover {
@@ -193,10 +193,10 @@
       color: #ffffff;
       font-size: clamp(20px, 2.0832vw, 80px);
       font-weight: bold;
-      width: 22%;
-      margin-top: $m16;
+      width: 28%;
+      margin-top: clamp(13px, 1.35408vw, 52px);
       line-height: clamp(27.5px, 2.8644000000000003vw, 110px);
-      margin-right: $m16;
+      margin-right: clamp(20px, 2.0832vw, 80px);
     }
 
     &__separator {
