--- a/src/Screens/FooterScreen/style.scss
+++ b/src/Screens/FooterScreen/style.scss
@@ -26,6 +26,7 @@
     margin-bottom: $m32mob;
   }
 }
+
 .spark {
   width: clamp(105px, 49.0644vw, 420px);
   height: clamp(34.5px, 16.12116vw, 138px);
@@ -81,6 +82,7 @@
       width: clamp(96.5px, 10.05144vw, 386px);
       height: clamp(10.325px, 1.0754519999999999vw, 41.3px);
     }
+
     &__logo:hover {
       cursor: pointer;
     }
@@ -105,16 +107,17 @@
         color: #ffffff;
         transition: 0.3s all;
       }
-<<<<<<< HEAD
-      &__text:hover {
-        cursor: pointer;
-        color: $red;
-=======
 
       &__text:hover {
-        color: $red;
         cursor: pointer;
->>>>>>> 2266f8f96ce05054e55d5aa6116a5ededeb4ce91
+        color: $red;
+
+
+        &__text:hover {
+          color: $red;
+          cursor: pointer;
+
+        }
       }
     }
   }
