--- a/src/Screens/MainScreen/style.scss
+++ b/src/Screens/MainScreen/style.scss
@@ -1,19 +1,21 @@
 @import "../../styles/variables.scss";
 
-.main-mob {
-}
+.main-mob {}
+
 .main-all {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   margin-top: $m128;
+
   &__par {
     color: $red;
     font-family: "Gotham Pro", sans-serif;
     font-weight: 400;
     font-size: $font17mob;
   }
+
   &__big {
     font-family: "Gotham Pro", sans-serif;
     font-size: clamp(16px, 7.47648vw, 64px);
@@ -24,6 +26,7 @@
     line-height: clamp(22.75px, 10.630619999999999vw, 91px);
     margin-top: $m16mob;
   }
+
   &__sec {
     color: $dark;
     font-family: "Roboto", sans-serif;
@@ -34,6 +37,7 @@
     line-height: clamp(12.5px, 5.840999999999999vw, 50px);
     margin-top: $m16mob;
   }
+
   &__s {
     &__con {
       display: flex;
@@ -44,6 +48,7 @@
       height: auto;
       padding-top: $m64mob;
     }
+
     &__nav {
       font-family: "Gotham Pro", sans-serif;
       font-size: clamp(16px, 7.47648vw, 64px);
@@ -54,6 +59,7 @@
       line-height: clamp(22.75px, 10.630619999999999vw, 91px);
       margin-top: $m16mob;
     }
+
     &__second {
       color: #ffffff;
       font-family: "Roboto", sans-serif;
@@ -64,6 +70,7 @@
       line-height: clamp(12.5px, 5.840999999999999vw, 50px);
       margin-top: $m16mob;
     }
+
     &__car {
       position: relative;
       top: $m64mob;
@@ -193,7 +200,7 @@
       color: #ffffff;
       font-size: clamp(20px, 2.0832vw, 80px);
       font-weight: bold;
-      width: 28%;
+      width: 30%;
       margin-top: clamp(13px, 1.35408vw, 52px);
       line-height: clamp(27.5px, 2.8644000000000003vw, 110px);
       margin-right: clamp(20px, 2.0832vw, 80px);
@@ -205,8 +212,7 @@
       margin-right: $m16;
     }
 
-    &__items {
-    }
+    &__items {}
 
     &__second {
       font-family: "Roboto", sans-serif;
