--- a/src/Components/Form/style.scss
+++ b/src/Components/Form/style.scss
@@ -61,7 +61,7 @@
     width: clamp(135px, 63.0828vw, 540px);
     line-height: clamp(12.5px, 5.840999999999999vw, 50px);
     margin-top: $m32mob;
-    margin-bottom: $m16;
+    margin-bottom: $m16mob;
     padding-bottom: clamp(5px, 2.3364vw, 20px);
     text-indent: 10px;
 
